--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,119 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
-    scroll-behavior: smooth;}
-body{
-    background-color: black;
+/* Importing Google font - Fira Sans */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Fira Sans', sans-serif;
 }
-header{
-    position: absolute;
-    top: 0;
-    left: 0;
+body {
+  background: #1B1B1D;
+}
+header {
+  z-index: 1000;  
+  /* position: fixed; */
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  padding: 20px;
+}
+header .navbar {
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar .menu-links {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  z-index: 100;
+  gap: 30px;
+}
+.navbar .menu-links li a {
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+  transition: 0.2s ease;
+}
+.navbar .menu-links .language-item a {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.navbar .menu-links .language-item span {
+  font-size: 1.3rem;
+}
+.navbar .menu-links li a:hover {
+  color: #1dbf73;
+}
+.navbar .menu-links .join-btn a {
+  border: 1px solid #fff;
+  padding: 8px 15px;
+  border-radius: 4px;
+}
+.navbar .menu-links .join-btn a:hover {
+  color: #fff;
+  border-color: transparent;
+  background: #1dbf73;
+}
+
+.navbar #hamburger-btn {
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  font-size: 1.7rem;
+}
+.navbar #close-menu-btn {
+  position: absolute;
+  display: none;
+  color: #000;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  font-size: 1.7rem;
+}
+@media screen and (max-width: 900px) {
+  header.show-mobile-menu::before {
+    content: "";
+    height: 100%;
     width: 100%;
-    padding: 30px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
-}
-header .logo{
-    color: #fff;
-    font-weight: 700;
-    text-decoration: none;
-    font-size: 2em;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-header ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-header ul li {
-    list-style: none;
-    margin-left: 20px;
-}
-header ul li a{
-    text-decoration: none;
-    color: #fff;
-    padding: 6px 15px;
-    border-radius: 20px;
-}
-header ul li a#active{
+    position: fixed;
+    left: 0;
+    top: 0;
+    backdrop-filter: blur(5px);
+  }
+  .navbar .menu-links {
+    height: 100vh;
+    max-width: 300px;
+    width: 100%;
     background: #fff;
-    color: #2b1055;
-}
-header ul li a:hover,
-header ul li a .menuchoice{
-    background: #fff;
-    color: #2b1055;
-}
+    position: fixed;
+    left: -300px;
+    top: 0;
+    display: block;
+    padding: 75px 40px 0;
+    transition: left 0.2s ease;
+  }
+  header.show-mobile-menu .navbar .menu-links {
+    left: 0;
+  }
+  .navbar .menu-links li {
+    margin-bottom: 30px;
+  }
+  .navbar .menu-links li a {
+    color: #000;
+    font-size: 1.1rem;
+  }
+  .navbar .menu-links .join-btn a {
+    padding: 0;
+  }
+  .navbar .menu-links .join-btn a:hover {
+    color: #1dbf73;
+    background: none;
+  }
+  .navbar :is(#close-menu-btn, #hamburger-btn) {
+    display: block;
+  }}
