--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,11 @@
   font-family: 'Fira Sans', sans-serif;
 }
 body {
-  background: #1B1B1D;
+  /* background: red; */
 }
 header {
   z-index: 1000;  
+  background: black;
   /* position: fixed; */
   left: 0;
   top: 0;
@@ -117,3 +118,280 @@ header .navbar {
   .navbar :is(#close-menu-btn, #hamburger-btn) {
     display: block;
   }}
+/* ------------------imgslider---------------- */
+.carousel{
+  width: 100%;
+  height:600px;
+  /* filter: blur(20px);  */
+  outline: #000 solid;
+  background: blur(20px);
+  /* background-color: black; */
+
+}
+
+.img-slider{
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  margin-left: 10%;
+  margin-top: 50px;
+  outline: #000 solid;
+  background: #1D212B;
+}
+.img-slider .slide{
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+}
+.img-slider .slide img{
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px ;
+
+}
+.img-slider .slide .info{
+  position: absolute;
+  top: 0;
+  padding: 15px 30px;
+}
+.img-slider .slide .info h2{
+  color: #fff;
+  font-size: 45px;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 2px ;
+}
+.img-slider .slide .info p{
+  color: #fff;
+  background: rgba(0,0,0,0.1);
+  font-size: 16px;
+  width: 60%;
+  padding: 10px;
+  border-radius: 4px ;
+}
+.img-slider .navigation{
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.img-slider .navigation .btn{
+  background: rgba(255,255,255, 0.5);
+  width: 12px;
+  height: 12px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+@media (max-width:820px){
+  .carousel{
+    width: 100%;
+    height: 350px;
+    /* filter: blur(20px); */
+  }
+  .img-slider{
+    width: 50%;
+    height: 50%;
+    margin-left: 15%;
+  }
+  .img-slider .slide .info{
+    padding: 10px 25px;
+  }
+  .img-slider .slide .info h2{
+    font-size: 35px;
+  }
+  .img-slider .slide .info p{
+    width: 70%;
+    font-size: 15px;
+  }
+  .img-slider .navigation{
+    bottom: 25px;
+  }
+  .img-slider .navigation .btn{
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+  }
+}
+@media (max-width:620px){
+  .img-slider{
+    width: 100%;
+    height: 250px;
+    margin-left: 10%;
+  }
+  .img-slider .slide .info{
+    padding: 10px 25px;
+  }
+  .img-slider .slide .info h2{
+    font-size: 35px;
+  }
+  .img-slider .slide .info p{
+    width: 70%;
+    font-size: 15px;
+  }
+  .img-slider .navigation{
+    bottom: 25px;
+  }
+  .img-slider .navigation .btn{
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+  }
+}
+/* -------------------------------information--------------------------------- */
+.information{
+  width: 100%;
+  height: 100vh;
+  background: black;
+}
+.infor{
+  position: relative;
+  padding: 100px;
+  background: black;
+}
+.infor h1{
+  font-size: 3.5em;
+  margin-top: 10px;
+  color: yellow;
+}
+.infor p{
+  font-size: 1.2em;
+  margin-top: 10px;
+  color: #fff;
+}
+
+/* ---------------services---------------- */
+#services{
+  padding: 50px 0;
+}
+.services-list{
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  grid-gap:100px;
+  margin-top: 50px;
+  padding-left: 140px;
+  padding-right: 140px;
+}
+.services-list div{
+  background: #262626;
+  padding:40px;
+  font-size: 13px;
+  font-weight: 300;
+  border-radius: 10px;
+  transition: background 0.5s, transform 0.5s;
+  font-size: larger;
+}
+.services-list div i {
+  color: white;
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+.services-list div p{
+  color: white;
+}
+.services-list div h2{
+  color: white;
+  font-size: 30px;
+  font-weight: 900;
+  margin-bottom: 30px;
+}
+.services-list div a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+  margin-top: 20px;
+  display: inline-block;
+  font-size: 18px;
+}
+.services-list div:hover{
+  background: #ff004f;
+  transform: translateY(-10px);
+}
+/* ---------------------------------------footer--------------------------------------- */
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: #24262b;
+    padding: 70px ;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+   margin-left: 40%;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(255,255,255,0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+.footer p{
+	position: absolute;
+	margin-bottom: 0px;
+	margin-bottom: 50%;
+	color: wheat;
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 100%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
