--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,12 @@ header .navbar {
   position: absolute;
   width: 100%;
   height: 100%;
+  clip-path: circle(0% at 0 50%);
+}
+.img-slider .slide.active{
+  clip-path: circle(150% at 0 50%);
+  transition: 2s;
+  transition-property: clip-path;
 
 }
 .img-slider .slide img{
@@ -187,6 +193,10 @@ header .navbar {
   margin-bottom: 10px;
   border-radius: 50%;
   cursor: pointer;
+}
+.img-slider .navigation .btn.active{
+  background: #2696E9;
+  box-shadow: 0 0 2px rgba(0,0,0,0.5);
 }
 @media (max-width:820px){
   .carousel{
